<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/split_bill_button"
            android:minHeight="45dp"
            android:text="@string/chat_menu_action_gallery"
            android:fontFamily="@font/lato_bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/split_bill_button"
            android:minHeight="45dp"
            android:text="@string/chat_menu_action_camera"
            android:textAllCaps="false"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/split_bill_button"
            android:minHeight="45dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>