<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_button_roud_corner1"
        android:gravity="center"
        android:padding="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:padding="@dimen/margin_10"
                android:textSize="18dp"
                android:text="@string/invite_" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/md_grey_100" />

            <TextView
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:padding="@dimen/margin_10"
                android:textSize="15dp"
                android:fontFamily="@font/lato_regular"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/light_blue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/md_grey_100" />

            <TextView
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group"
                android:textSize="15dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/light_blue"
                android:padding="@dimen/margin_10"
                android:layout_gravity="center"
                android:gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/md_grey_100" />

            <TextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/light_blue"
                android:padding="@dimen/margin_10"
                android:fontFamily="@font/lato_bold"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>