<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/winner_bg"
    android:layout_height="match_parent"
    tools:context=".ui.WinnerActivity">

    <LinearLayout
        android:id="@+id/main_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/light_blue"
                    android:text="@string/congratulations" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="ahagsfbnsdf"
                    />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/user_profile_avatar"
                    />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/you_have_won" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/price_amount"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:textSize="14dp"
                    android:fontFamily="@font/lato_regular"
                    android:layout_height="wrap_content"
                    android:text="0" />
                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/coins"/>
            </TableRow>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ed_discreption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/lato_regular"
                android:layout_marginRight="30dp"
                android:maxLines="1"
                android:backgroundTint="@color/light_green"
                android:hint="@string/short_descreption"
                android:textColorHint="@color/hint_text_color"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/lato_bold"
                android:layout_marginRight="30dp"
                android:background="@drawable/shape_button_roud_corner"
                android:backgroundTint="@color/light_green"
                android:text="@string/uopload_your_video_or_img"
                android:layout_marginTop="@dimen/size_30"
                android:textColor="@color/white" />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight=".5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/skip" />
    </LinearLayout>
        <Space
            android:id="@+id/space"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="250dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>